@@ -4,16 +4,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ontimize.labs</groupId>
     <artifactId>ontimize-core-parent</artifactId>
-    <version>6.1.0</version>
+    <version>6.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>ontimize-core-icon</module>
         <module>ontimize-core-common</module>
         <module>ontimize-core-client</module>
+    	<module>ontimize-core-client-sam</module>
         <module>ontimize-jee-hessian</module>
         <module>ontimize-jee-desktopclient</module>
         <module>ontimize-jee-dms-desktopclient</module>
-<!--        <module>ontimize-jee-desktopclient-oauth</module>-->
         <module>ontimize-jee-server-hessian-api</module>
         <module>ontimize-jee-callback-websocket</module>
         <module>ontimize-jee-callback-cometd</module>
@@ -58,6 +58,11 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <!--Public remote repository to discover new JAI versions-->
+	    <repository>
+		  <id>jai-public</id>
+		  <url>https://repo.osgeo.org/repository/release/</url>
+		</repository>
     </repositories>
 
     <properties>
@@ -73,14 +78,11 @@
         <log4j-core.version>2.8.2</log4j-core.version>
         <commons-jexl.version>2.1.1</commons-jexl.version>
         <dynamicjasper.version>5.3.9</dynamicjasper.version>
-        <registry.version>3.1.3</registry.version>
-        <sam.version>0.0.1</sam.version>
-        <jai.version>1.1.2</jai.version>
-        <tidy.version>8.0</tidy.version>
+        <jai.version>1.1.3</jai.version>
+        <tidy.version>1.0.5</tidy.version>
         <javahelp.version>2.0.05</javahelp.version>
-        <jep.version>2.24</jep.version>
         <mail.version>1.4.5</mail.version>
-        <mesp.version>1.0.2</mesp.version>
+        <exp4j.version>0.4.8</exp4j.version>
         <jna.version>5.16.0</jna.version>
         <core-renderer.version>R8</core-renderer.version>
         <docx4j.version>8.3.13</docx4j.version>
@@ -88,14 +90,11 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-text.version>1.10.0</commons-text.version>
         <jooreports.version>2.0.0</jooreports.version>
-        <dynclass.version>0.0.1</dynclass.version>
         <morena.version>6.4.0.12</morena.version>
         <morena7.version>7.1.27</morena7.version>
         <comm.version>2.0</comm.version>
-        <jnlp.version>1.2.2</jnlp.version>
         <jmf.version>2.1.1e</jmf.version>
         <poi.version>5.3.0</poi.version>
-        <systray4j.version>2.4.1</systray4j.version>
         <quartz.version>1.5.2</quartz.version>
         <junit.version>4.11</junit.version>
         <jcommon.version>1.0.15</jcommon.version>
@@ -168,7 +167,6 @@
                     <encoding>Cp1252</encoding>
 			        <fork>true</fork>
 			        <compilerArgs>
-			            <arg>--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</arg>
 			            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
 			        </compilerArgs>
                 </configuration>
@@ -233,7 +231,14 @@
                 <groupId>com.ontimize.labs</groupId>
                 <artifactId>ontimize-jee-hessian-common</artifactId>
                 <version>${project.version}</version>
-            </dependency>
+            </dependency> 
+            <!-- Support to missing external library sam:sam-->
+	      <dependency>
+	    	<groupId>com.ontimize.labs</groupId>
+	        <artifactId>ontimize-core-client-sam</artifactId>
+	        <version>${project.version}</version>
+	        <optional>true</optional>
+	      </dependency>
 	
 			<dependency>
 				<groupId>com.ontimize.jee</groupId>
@@ -308,24 +313,22 @@
                 <version>${dynamicjasper.version}</version>
                 <scope>compile</scope>
                 <optional>true</optional>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.github.librepdf</groupId>
+                        <artifactId>openpdf</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
+            <!-- Force this "official" version, to avoid use non-public version "1.3.30.jaspersoft.2" inherited by "jasperreports:6.20.4" nherited by DynamicJasper-->
+		    <dependency>
+				<groupId>com.github.librepdf</groupId>
+				<artifactId>openpdf</artifactId>
+				<version>1.4.2</version>
+		  	</dependency>
 
-            <dependency>
-                <groupId>com.ice.jni</groupId>
-                <artifactId>registry</artifactId>
-                <version>${registry.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
-                <groupId>sam</groupId>
-                <artifactId>sam</artifactId>
-                <version>${sam.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
-                <groupId>com.sun.media</groupId>
+            <dependency>        
+        	<groupId>javax.media</groupId>
                 <artifactId>jai_codec</artifactId>
                 <version>${jai.version}</version>
                 <optional>true</optional>
@@ -338,12 +341,12 @@
                 <optional>true</optional>
             </dependency>
 
-            <dependency>
-                <groupId>org.w3c</groupId>
-                <artifactId>tidy</artifactId>
-                <version>${tidy.version}</version>
-                <optional>true</optional>
-            </dependency>
+			<dependency>
+				<groupId>com.github.jtidy</groupId>
+				<artifactId>jtidy</artifactId>
+				<version>${tidy.version}</version>
+				<optional>true</optional>
+			</dependency>
 
             <dependency>
                 <groupId>javax.help</groupId>
@@ -352,12 +355,6 @@
                 <optional>true</optional>
             </dependency>
 
-            <dependency>
-                <groupId>org.nfunk</groupId>
-                <artifactId>jep</artifactId>
-                <version>${jep.version}</version>
-                <optional>true</optional>
-            </dependency>
             <dependency>
 			    <groupId>net.java.dev.jna</groupId>
 			    <artifactId>jna</artifactId>
@@ -376,12 +373,21 @@
                 <optional>true</optional>
             </dependency>
 
-            <dependency>
-                <groupId>mesp</groupId>
-                <artifactId>mesp</artifactId>
-                <version>${mesp.version}</version>
-                <optional>true</optional>
-            </dependency>
+			<dependency>
+				<groupId>net.objecthunter</groupId>
+				<artifactId>exp4j</artifactId>
+				<version>${exp4j.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>ch.qos.logback</groupId>
+						<artifactId>logback-classic</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 
             <dependency>
                 <groupId>org.xhtmlrenderer</groupId>
@@ -427,13 +433,6 @@
             </dependency>
 
             <dependency>
-                <groupId>dynclass</groupId>
-                <artifactId>dynclass</artifactId>
-                <version>${dynclass.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
                 <groupId>morena</groupId>
                 <artifactId>morena</artifactId>
                 <version>${morena.version}</version>
@@ -455,13 +454,6 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.jnlp</groupId>
-                <artifactId>jnlp</artifactId>
-                <version>${jnlp.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
                 <groupId>javax.media</groupId>
                 <artifactId>jmf</artifactId>
                 <version>${jmf.version}</version>
@@ -479,13 +471,6 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
-                <groupId>snoozesoft</groupId>
-                <artifactId>systray4j</artifactId>
-                <version>${systray4j.version}</version>
                 <optional>true</optional>
             </dependency>
 
